# avito-python-trainee-assignment-quad-matrix-snail

./: .gitignore  Makefile  README.md  pyproject.toml
matrix_handler/: snail_matrix.py
tests/: test_snail_matrix.py
tests/fixtures/: test_non_quad_matrix.txt
